--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Live The K-Way Everyday </title>
+    <title> About K-Way </title>
 </head>
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
@@ -10,18 +10,19 @@
     <img src = "kway1.png"
     alt = "The Kway logo" 
  <br>
-<p>                 
-    <a href="index.html"> About </a>
-    <br>
-<a href="home.html"> Home </a>
-<br>
-<a href="media.html"> Media </a>
-<br>
-<a href="Contact.html"> Contact Us </a>
-<br>
-</p>
+ <br>
+ <p></p> 
+ <a href="index.html"> > Home < </a>
+ <br>
+ <a href="home.html"> > About < </a>
+ <br>
+ <a href="media.html"> > Media < </a>
+ <br>
+ <a href="contact.html"> > Contact Us < </a>
+ <br>
+<p></p>
 <h1> Welcome to K-WAY </h1>
-media
+
 <p>
 Have you ever driven past a house, or a row of houses that are the size of offices, <br>
 to only find that 1, maybe 2 people live in it?<br>
