--- a/media.html
+++ b/media.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title> K-Way Media/Gallery/Links </title>
 </head>
 <link rel="stylesheet" type="text/css" href="main.css">
 
@@ -10,16 +10,15 @@
 
     <img src = "kway1.png"
     alt = "The Kway logo" 
+<p></p>
+    
+    <a href="index.html"> > Home < </a>
     <br>
-    <p></p>
-   
-    <a href="index.html"> About </a>
+    <a href="home.html"> > About < </a>
     <br>
-     <a href="home.html"> Home </a>
+    <a href="media.html"> > Media < </a>
     <br>
-    <a href="media.html"> Media </a>
-    <br>
-    <a href="Contact.html"> Contact Us </a>
+    <a href="contact.html"> > Contact Us < </a>
     <br>
 </p>
  <h1> Welcome To The Gallery </h1>
