--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title> Contact K-Way </title>
 </head>
 <link rel="stylesheet" type="text/css" href="main.css">
 
@@ -13,17 +13,19 @@
     
     <br>
     <p></p> 
-    <a href="index.html"> About </a>
+    <a href="index.html"> > Home < </a>
     <br>
-    <a href="home.html"> Home </a>
+    <a href="home.html"> > About < </a>
     <br>
-    <a href="media.html"> Media </a>
+    <a href="media.html"> > Media < </a>
     <br>
-    <a href="Contact.html"> Contact Us </a>
-    <br>
-<br>
+    <a href="contact.html"> > Contact Us < </a>
+    <p></p>
 
-<h1> Do you want to get in contact with your thoughts, ideas and questions? </h1>
+
+
+<h1> Do you want to get in contact with your thoughts, <br>
+    ideas and questions? </h1>
 <br>
 <p>
 Visit the official Facebook page for K-WAY and simply message your queries.<br>
