--- a/index.html
+++ b/index.html
@@ -2,36 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title> K-Way Home </title>
 </head>
 <body>
-
     <link rel="stylesheet" type="text/css" href="main.css">
 
     <img src = "kway1.png"
     alt = "The Kway logo" 
     <br>
    
-     <p>
-         </p>
-
-       <a href="index.html"> About </a>
-         <br> 
-        <a href="home.html"> Home </a>
-         <br>
-         <a href="media.html"> Media </a>
-         <br>
-         <a href="Contact.html"> Contact Us </a>
-         <br>
+    <br>
+    <p></p> 
+    <a href="index.html"> > Home < </a>
+    <br>
+    <a href="home.html"> > About < </a>
+    <br>
+    <a href="media.html"> > Media < </a>
+    <br>
+    <a href="contact.html"> > Contact Us < </a>
+    <br>
+    <p></p>
 
 <h1> What K-Way's about? </h1>
+<p></p>
+<p></p>
 
 
 <P> At K-Way, we aim to raise awareness, persistence and funding to protect our world from being completely irreversible. 
-<p>
+<br>
     We want to give the newer generations a fighting chance to make something of themselves! We want that chance ourselves.<br>
-    <br>
-    but we really cannot lead into a future if old operations continue to daily run. without consequences being thought of properly.
+    
+    but we really cannot lead into a future if old operations continue to daily run. without consequences being thought of properly.</div>
 </p>
 
     <img src = "NoCuttingDownTrees.jpg"
@@ -41,7 +42,7 @@
      <br>
      <p> A picture can speak for itself, but take this picture of one tree being cut down,
          <br>
-         <br> And multiply it to between 3.5 to 7 billion times. That is a lot of trees. Even healthy trees are caught up in it! <br>
+         <br> And multiply it to between 3.5 to 7 billion times. That is a lot of trees a year. Even healthy trees are caught up in it! <br>
          <br>
          Being destroyed for human demands0 There has to be something that could minimize the amount of mass deforestation. </p>
 
