--- a/media.html
+++ b/media.html
@@ -9,7 +9,7 @@
 <body>
 
     <img src = "kway1.png"
-    alt = "The Kway logo" 
+    alt = "The Kway Logo" 
 <p></p>
     
     <a href="index.html"> > Home < </a>
@@ -20,8 +20,18 @@
     <br>
     <a href="contact.html"> > Contact Us < </a>
     <br>
+
 </p>
+
  <h1> Welcome To The Gallery </h1>
+ <br>
+
+  <img src = "kway1.png"
+  alt = "the Kway Logo"
+  
+  <br>
+  <img src = "NoCuttingDownTrees.jpg"
+  alt = "Don't Kill Trees""
     
 </body>
 </html>
